Fixed Vertical Alignment

--- a/less/_boxes.less
+++ b/less/_boxes.less
@@ -4,7 +4,7 @@
 	content: " ";
 	background: @secondColor;
 	position: absolute;
-	top: 0;
+	top: (@boxSize/8*2);
 	left: 0;
 	animation: cp-boxes-animate-before @speed3x ease-in-out infinite;
 }
@@ -13,7 +13,7 @@
 	content: " ";
 	background: @secondColor;
 	position: absolute;
-	top: 0;
+	top: (@boxSize/8*2);
 	right: 0;
 	animation: cp-boxes-animate-after @speed3x ease-in-out infinite;
 }
